Locations - Add JPA relationships and DTOs (#62)
* deleted overviews / facades

* updated Continent to use separate DTOs for viewing, creating, and updating data
added JPA annotations for Continent

* created global classes & Continent - refactored to have view, create, and update dtos, removed deprecated files/classes, updated service, controller, and tests

* added test-related classes

* Country - created view, create, and update dtos, updated mapper, updated entity, removed deprecated dto, removed deprecated interface, updated repository

* Added helper functions to BaseService to clean up services, added missing tests to Continent, used BaseService helper methods in ContinentService

* Country - fixed jpa relationship, created test builder, updated controller and service, added test constants, added country factory, fixed tests

* City - created view, create, and update dtos, updated mapper, updated entity, removed deprecated dto, removed deprecated interface, updated repository

* City - created test builder, updated controller and service, added test constants, added country factory, fixed tests
Country - removed unused variables in service

* added jpa relationships, additional DTOs, updated services and controllers, updated tests, added test data, added test builders, deleted deprecated files

* added jpa relationships, additional DTOs, updated services and controllers, updated tests, added test data, added test builders, deleted deprecated files, fixed tests